[package]
name = "js-runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "runtime"
path = "examples/runtime.rs"

[dependencies]
reqwest = "0.11.24"
serde = "1.0.197"
serde_json = "1.0.114"
serde_v8 = { version = "0.175.0" }
tokio = { version = "1.36.0", featured = ["rt"] } 
v8 = { version = "0.83.2" }


